# Arkanoid

./: CMakeLists.txt  basic.fsh  basic.vsh  main.cpp
glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: basic.vsh
src/: Context.cpp  Context.h  Program.cpp  Program.h  Utils.cpp  Utils.h  main.cpp
